# matrix-profile-hls

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  matrix-profile-hls.prj  output.txt
build_sw/: CMakeCache.txt  Config.hpp  Makefile  MatrixProfileHost  MatrixProfileKernel.mdb  MatrixProfileKernel.xclbin  MatrixProfileKernel.xclbin.info  MatrixProfileKernel.xclbin.link_summary  MatrixProfileKernelTLF.xo  MatrixProfileKernelTLF.xo.compile_summary  cmake_install.cmake  emconfig.json
build_sw/.Xil/configutil-1168-alveo0/hw/: ext_metadata.json  xsa.xml
build_sw/MatrixProfileKernel.build/: MatrixProfileKernelTLF.mdb  MatrixProfileKernelTLF_guidance.json  MatrixProfileKernelTLF_guidance.pb  link_guidance.json  link_guidance.pb
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/: MatrixProfileKernelTLF.spr
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/.jobs/: vrs_config_1.xml
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/MatrixProfileKernelTLF/: .runmsg.txt  .vitis_hls.begin.rst  MatrixProfileKernelTLF.tcl  htr.txt  rundef.js  runme.sh  vitis_hls.pb
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/MatrixProfileKernelTLF/MatrixProfileKernelTLF/: hls.app  kernel.xml  kernel.xml.orig
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/MatrixProfileKernelTLF/MatrixProfileKernelTLF/solution/: solution.aps  solution.directive
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/MatrixProfileKernelTLF/MatrixProfileKernelTLF/solution/.autopilot/: .autopilot_exit
build_sw/MatrixProfileKernel.build/MatrixProfileKernelTLF/MatrixProfileKernelTLF/MatrixProfileKernelTLF/solution/.autopilot/db/: .message_syn.xml  MatrixProfileKernelStreamless.g.bc  MatrixProfileKernelStreamless.pp.0.cpp  a.g  a.g.ld.0.bc  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  all.directive.json  apatb_MatrixProfileKernelTLF_ir.ll  top-io-fe.xml
build_sw/MatrixProfileKernel.build/link/: link.spr
build_sw/MatrixProfileKernel.build/link/int/: MatrixProfileKernel.xml  MatrixProfileKernel_build.rtd  xcl_top.cpp
build_sw/MatrixProfileKernel.build/logs/: optraceViewer.html
build_sw/MatrixProfileKernel.build/reports/MatrixProfileKernelTLF/: MatrixProfileKernelTLF_guidance.html
build_sw/MatrixProfileKernel.build/reports/link/: link_guidance.html
build_sw/config/: common-config.cfg  compile-config.cfg  link-config.cfg
build_sw/reports/: build-info.txt
config/: common-config.cfg  common-config.cfg.in  compile-config.cfg  link-config.cfg.in  package-config.cfg.in
data/: README.md  listings.json  small16_syn.txt  small8_syn.txt
data/benchmark/: 1024.txt  16384.txt  small256-2.txt
data/binary/: 1024.tsb  16384.tsb  4096.tsb  65536.tsb  med512.tsb  random128.tsb  small128_syn.tsb  small16_syn.tsb  small256-2.tsb  small256_syn.tsb  small32_syn.tsb  small8_syn.tsb
data/real/: ecg-heartbeat-av.txt  italianpowerdemand.txt  mfcc_vanilla_ice.txt  sudden-cardiac-death.txt  walk-jog-run.txt
data/synthetic/: med512.txt  random128_syn.txt  small128_syn.txt  small256_syn.txt
host/: MatrixProfileHost.cpp
include/: AggregateTypeTraits.hpp  ArbitraryPrecisionFixed.hpp  Config.hpp.in  Initialize.hpp  MatrixProfile.hpp  cxxopts.hpp  optional.hpp
include/host/: BenchmarkProfile.hpp  FileIO.hpp  HostSideComputation.hpp  Logger.hpp  MatrixProfileHost.hpp  OpenCL.hpp  Precomputation.hpp  Timer.hpp  logger.hpp
include/kernel/: DataPacks.hpp  HLSMathUtil.hpp  MatrixProfileKernel.hpp  Stream.hpp  Stream2DInit.hpp.in  TreeReduce.hpp
kernel/: .MatrixProfileKernelStreamless.cpp.swp  MatrixProfileKernel.cpp  MatrixProfileKernelStream1D.cpp  MatrixProfileKernelStream2D.cpp  MatrixProfileKernelStreamless.cpp  MatrixProfileKernelStreamless.cpp.save  MatrixProfileKernelStreamlessColumn.cpp  MatrixProfileKernelStreamlessRow.cpp  MatrixProfileKernelTiled.cpp  MatrixProfileKernelVanilla.cpp
src/host/: MatrixProfileHost.cpp  mphost
src/kernel/: MatrixProfileKernel.cpp  MatrixProfileKernelStream1D.cpp  MatrixProfileKernelStream2D.cpp  MatrixProfileKernelStreamless.cpp
test/: TestStream1DKernel.cpp  TestStream2DKernel.cpp  TestStreamlessKernel.cpp  TestTiledKernel.cpp  TestVanillaKernel.cpp
test/include/: Config.hpp  MatrixProfileReference.hpp  MatrixProfileTests.hpp  MockConfig.hpp  MockInitialize.hpp  MockStream.hpp
util/: config_hw_emu.sh  lxsct.sh  matrix_profile.py  tsbin.py
